Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.4.1
-
None
-
59f7b30d41b06b1d9da81aea5784d57ecd91ab04 42c04ed29c36eec70cdce58e5c2d19faec62d039
Description
If a Repeater is used to create children for a RowLayout, the newest element doesn't respect the arrangement of existing children. After the model updates, the RowLayout adds new children from the Repeater, and the newest child is laid out after an element that is outside the Repeater.
See attached image and code example.
Attachments
Issue Links
- depends on
-
QTBUG-45423 Repeater does not create items in the correct stacking order.
-
- Closed
-
- relates to
-
QTBUG-47134 [REG 5.4.0->5.5.0] RowLayout changes order of its elements when inside asynchronous Loader
-
- Closed
-