Fix {Row|Grid}Layout to adhere to sibling order of its children

In order to reduce the number of temporary calls to updateLayoutItems,
I should postpone it until the item is completed.
This will be a separate patch.

This is a backport of change 59f7b30d41b06b1d9da81aea5784d57ecd91ab04 

Change-Id: Iee495ee3d85a03407b06d06d8076c5c63d3d20cf
Task-number: QTBUG-45152
Reviewed-by: Ulf Hermann <ulf.hermann@theqtcompany.com>