src/layouts/qquicklayout.cpp
@@ -759,6 +759,7 @@ void QQuickLayout::itemChange(ItemChange change, const ItemChangeData &value)
         QObject::connect(item, SIGNAL(implicitWidthChanged()), this, SLOT(invalidateSenderItem()));
         QObject::connect(item, SIGNAL(implicitHeightChanged()), this, SLOT(invalidateSenderItem()));
         QObject::connect(item, SIGNAL(baselineOffsetChanged(qreal)), this, SLOT(invalidateSenderItem()));
+        QQuickItemPrivate::get(item)->addItemChangeListener(this, QQuickItemPrivate::SiblingOrder);
         if (isReady())
             updateLayoutItems();
     } else if (change == ItemChildRemovedChange) {
@@ -766,6 +767,7 @@ void QQuickLayout::itemChange(ItemChange change, const ItemChangeData &value)
         QObject::disconnect(item, SIGNAL(implicitWidthChanged()), this, SLOT(invalidateSenderItem()));
         QObject::disconnect(item, SIGNAL(implicitHeightChanged()), this, SLOT(invalidateSenderItem()));
         QObject::disconnect(item, SIGNAL(baselineOffsetChanged(qreal)), this, SLOT(invalidateSenderItem()));
+        QQuickItemPrivate::get(item)->removeItemChangeListener(this, QQuickItemPrivate::SiblingOrder);
         if (isReady())
             updateLayoutItems();
     }
@@ -795,6 +797,12 @@ void QQuickLayout::invalidateSenderItem()
 bool QQuickLayout::isReady() const
 {
     return d_func()->m_isReady;
+}
+
+void QQuickLayout::itemSiblingOrderChanged(QQuickItem *item)
+{
+    Q_UNUSED(item);
+    updateLayoutItems();
 }
 
 void QQuickLayout::rearrange(const QSizeF &/*size*/)
